<resources>
    <string name="app_name">Recimeal</string>
    <string name= "default_title">No Title Found</string>
    <string name="default_description">No Description Found</string>
    <string name="default_instructions">No Instructions Found</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_main">Main</string>
    <string name="desc">Description:</string>
    <string name="action_settings">Settings</string>
    <string name="student_records_system">Student Records System</string>
    <string name="title_activity_students">SRSYS: Students</string>
    <string name="title_activity_courses">SRSYS: Courses</string>
    <string name="title_activity_student_courses">SRSYS: Student Course History</string>
    <string name="title_activity_course_students">SRSYS: Course Registrations</string>
    <string name="students">Students</string>
    <string name="courses">Courses</string>
    <string name="registrations">Registrations</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="student_id">Student ID</string>
    <string name="course_id">Course ID</string>
    <string name="gpa">GPA</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="title_activity_recipe_main">RecipeMainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="add_button">Add</string>
    <string name="fav_button">Favorites</string>
    <string name="search_button">Search submit</string>
    <string name="search_field">Search field</string>
    <string name="search_hint">Filter&#8230;</string>

</resources>
