<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="comp3350.recimeal.presentation.CoursesActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/listCourses"
        android:layout_weight="1"
        android:layout_gravity="top"
        android:choiceMode="singleChoice" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:id="@+id/separator"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2">

        <TextView
            android:id="@+id/textCourseID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="60dp"
            android:text="@string/course_id"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editCourseID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:enabled="true"
            android:inputType="textNoSuggestions" />

        <Button
            android:id="@+id/buttonCourseStudents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:enabled="false"
            android:onClick="buttonCourseStudentsOnClick"
            android:text="@string/registrations" />

        <TextView
            android:id="@+id/textCourseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editCourseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:inputType="text" />

    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/buttonCourseDelete"
            android:layout_alignParentRight="true"
            android:enabled="false"
            android:onClick="buttonCourseDeleteOnClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:id="@+id/buttonCourseCreate"
            android:layout_alignParentLeft="true"
            android:enabled="true"
            android:onClick="buttonCourseCreateOnClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/buttonCourseUpdate"
            android:layout_centerHorizontal="true"
            android:enabled="false"
            android:onClick="buttonCourseUpdateOnClick" />
    </RelativeLayout>

</LinearLayout>
